# XLDataGraph

./: .gitignore  MANIFEST.in  README.md  Setup.py  UpgradeLog.htm  pyproject.toml  xldg.sln
XLDataGraph/: XLDataGraph.py  requirements.txt
xldg/: requirements.txt  xldg.pyproj
xldg/examples/: chimerax_export.py  circus_plot.py  gephi_export.py  venn_diagram.py
xldg/examples/files/: dataset_2.zhrm  example.dmn  example.fasta
xldg/examples/files/results/IMP_crosslinks_prediction_a_star1/: pred_interprotein_xl_1_rep.pb  pred_intraprotein_xl_1_rep.pb
xldg/examples/files/results/IMP_crosslinks_prediction_direct/: IMP_crosslinks_prediction_direct_interprotein_xl_1_rep.pb  IMP_crosslinks_prediction_direct_intraprotein_xl_1_rep.pb
xldg/examples/files/results/IMP_crosslinks_with_structure/: IMP_crosslinks_with_structure_interprotein_xl_1_rep.pb  IMP_crosslinks_with_structure_intraprotein_xl_1_rep.pb  outliers_IMP_crosslinks_with_structure_interprotein_xl_1_rep.pb  (+1 more)
xldg/src/xldg/: __init__.py  api.py  circos.py  core.py  data.py  fasta.py  graphics.py  utils.py  venn.py  xl.py
xldg/tests/: circos_test.py  core_test.py  data_test.py  fasta_test.py  graphics_test.py  manual_run.py  utils_test.py  xl_test.py
xldg/tests/circos_test/: circos_test.py  fasta_1.fasta  fasta_2.fasta
xldg/tests/files/data/crosslink/: invalid_file.pcd  (+3 more)
xldg/tests/test_data/dmn/: domains_2.dmn
xldg/tests/test_data/fasta/: never_used.fasta  ribosom_E_coli_K12.fas
xldg/tests/test_data/xl_test/: counter_reference.csv  counter_reference.tsv  dimer.pcd
xldg/tests/utils_test/: utils_test.py
(+36 files in other folders)
