[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xldg"
version = "0.3.0"
description = "XLDataGraph is a library for crosslinking data analysis and visualization."
readme = "README.md"
authors = [
    {name = "a-helix", email = "sorokin.biochemistry@gmail.com"},
]
license = {text = "GPL-3.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
requires-python = ">=3.7"
dependencies = [
    "requests>=2.32.3",
    "pyCirclize>=1.6.0",
    "matplotlib_venn>=1.1.2",
]

[project.urls]
"Homepage" = "https://github.com/a-helix/XLDataGraph"
"Bug Tracker" = "https://github.com/a-helix/XLDataGraph/issues"

[tool.setuptools]
package-dir = {"" = "xldg/src"}

[tool.setuptools.packages.find]
where = ["xldg"]
exclude = ["tests*"]